tests/fail/empty_path.stderr
error: no decorator paths provided
 --> tests/fail/empty_path.rs:3:1
  |
3 | #[decorate()]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `decorate` (in Nightly builds, run with -Z macro-backtrace for more info)
